--- a/cspeedups/ChangeLog
+++ b/cspeedups/ChangeLog
@@ -1,6 +1,24 @@
+Version 0.3
+http://svn.edgewall.org/repos/markup/tags/0.3.0/
+(?, from branches/stable/0.3.x)
+
+ * Expression evaluation now differentiates between undefined variables and
+   variables that are defined but set to `None`. This also means that local
+   variables can override built-ins even if the local variable are set to
+   `None` (ticket #36).
+ * The plugin implementation now makes more functions available for use inside
+   templates: XML(), HTML(), defined(), and value-of(). These are mostly for
+   migration from Kid.
+ * The parsing of `py:with` directives has been improved: you can now assign
+   to multiple names, and semicolons inside string literals are treated as
+   expected.
+ * Generator expressions can now be used in template expressions (ticket #16).
+ * Added serialization to plain text (ticket #41).
+
+
 Version 0.2
 http://svn.edgewall.org/repos/markup/tags/0.2.0/
-(?, from branches/stable/0.2.x)
+(Aug 22 2006, from branches/stable/0.2.x)
 
  * XPath syntax errors now contain position info (ticket #20).
  * Errors in expression evaluation now contain the correct line number in the
@@ -31,6 +49,10 @@ http://svn.edgewall.org/repos/markup/tags/0.2.0/
    literals before).
  * XPath expressions in now support XPath variables ($var) in predicates
    (ticket #31).
+ * Expressions in templates can now span multiple lines if they are enclosed
+   in curly braces.
+ * py:def macros can now be invoked from within expressions inside attribute
+   values (ticket #34).
 
 
 Version 0.1
