--- a/cspeedups/ChangeLog
+++ b/cspeedups/ChangeLog
@@ -1,7 +1,68 @@
-Version 0.3
-http://svn.edgewall.org/repos/genshi/tags/0.3.0/
+Version 0.4
+http://svn.edgewall.org/repos/genshi/tags/0.4.0/
+(?, from branches/stable/0.4.x)
+
+ * New example applications for CherryPy and web.py.
+ * The template loader now uses a LRU cache to limit the number of cached
+   templates to a configurable maximum. Also, a race condition in the template
+   loader was fixed by adding locking.
+ * A new filter (genshi.filters.HTMLFormFiller) was added, which can populate 
+   HTML forms based on a dictionary of values.
+ * The set of permitted tag and attribute names for the HTMLSanitizer can now
+   be configured per instance.
+ * The template engine plugin now supports a range of options for
+   configuration, for example to set the default serialization method, the
+   default output encoding, or the default DOCTYPE.
+
+
+Version 0.3.3
+http://svn.edgewall.org/repos/genshi/tags/0.3.3/
 (?, from branches/stable/0.3.x)
 
+ * Fixed bug introduced in 0.3.2 that broke the parsing of templates which
+   declare the same namespace more than once in a nested fashion.
+ * Fixed the parsing of HTML entity references inside attribute values, both
+   in the `XMLParser` and the `HTMLParser` classes.
+
+
+Version 0.3.2
+http://svn.edgewall.org/repos/genshi/tags/0.3.2/
+(Oct 12 2006, from branches/stable/0.3.x)
+
+ * Exceptions from templates now contain the absolute path to the template file
+   when a search path is used. This enables tracebacks to display the line in
+   question.
+ * The template engine plugin now provides three different types: "genshi" and
+   "genshi-markup" map to markup templates, while "genshi-text" maps to text
+   templates.
+ * Fixed the namespace context used by XPath patterns in py:match templates.
+   The were erroneously using the namespace context of the elements being
+   matched, where they should rather use the context in which they were
+   defined.
+ * The contents of `<script>` and `<style>` elements are no longer escaped when
+   serializing to HTML but declaring the XHTML namespace in the template.
+ * Improved error message raised when using the `py:for` directive on an object
+   that is not iterable (ticket #60).
+ * Fixed the XPath function `starts-with()` which was always returning true
+   (ticket #61).
+
+
+Version 0.3.1
+http://svn.edgewall.org/repos/genshi/tags/0.3.1/
+(Sep 22 2006, from branches/stable/0.3.x)
+
+ * Includes and user-defined filters were not getting the correct context data
+   when used inside a match template (ticket #56).
+ * XPath patterns using the union operator (`|`) were returning only partial
+   results in some cases.
+
+
+Version 0.3
+http://svn.edgewall.org/repos/genshi/tags/0.3.0/
+(Sep 17 2006, from branches/stable/0.3.x)
+
+ * The project name was changed from "Markup" to "Genshi". See UPGRADE.txt
+   for upgrade instructions.
  * Expression evaluation now differentiates between undefined variables and
    variables that are defined but set to `None`. This also means that local
    variables can override built-ins even if the local variable are set to
@@ -34,6 +95,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.3.0/
    to multiple elements (ticket #49).
  * Using namespace prefixes in XPath expressions is now supported.
  * Expressions now correctly handle slices (ticket #51).
+ * A simple text-based template language is now included for generating
+   plain text output (ticket #47).
 
 
 Version 0.2
