Ported [389:391] to 0.3.x branch.

--- a/0.3.x/ChangeLog
+++ b/0.3.x/ChangeLog
@@ -1,3 +1,14 @@
+Version 0.3.4
+http://svn.edgewall.org/repos/genshi/tags/0.3.4/
+(?, from branches/stable/0.3.x)
+
+ * The encoding of HTML and XML files, as well as markup and text templates,
+   can now be specified. Also, the encoding specified in XML declarations is
+   now respected unless an expiclit encoding is requested.
+ * Expressions used as arguments for `py:with`, `py:def`, and `py:for`
+   directives can now contain non-ASCII strings.
+
+
 Version 0.3.3
 http://svn.edgewall.org/repos/genshi/tags/0.3.3/
 (Oct 16 2006, from branches/stable/0.3.x)
