--- a/0.3.x/ChangeLog
+++ b/0.3.x/ChangeLog
@@ -1,3 +1,17 @@
+Version 0.3.5
+http://svn.edgewall.org/repos/genshi/tags/0.3.4/
+(Nov 22 2006, from branches/stable/0.3.x)
+
+ * Fix XPath traversal in match templates. Previously, `div/p` would be treated 
+   the same as `div//p`, i.e. it would match all descendants and not just the
+   immediate children.
+ * Preserve whitespace in HTML `<pre>` elements also when they contain child
+   elements.
+ * Match templates no longer match their own output (ticket #77).
+ * Blank lines before directives in text templates are now preserved as
+   expected (ticket #62).
+
+
 Version 0.3.4
 http://svn.edgewall.org/repos/genshi/tags/0.3.4/
 (Nov 2 2006, from branches/stable/0.3.x)
