--- a/0.3.x/ChangeLog
+++ b/0.3.x/ChangeLog
@@ -1,5 +1,12 @@
+Version 0.3.6
+http://svn.edgewall.org/repos/genshi/tags/0.3.6/
+(Dec 11 2006, from branches/stable/0.3.x)
+
+ * The builder API now accepts streams as children of elements and fragments.
+
+
 Version 0.3.5
-http://svn.edgewall.org/repos/genshi/tags/0.3.4/
+http://svn.edgewall.org/repos/genshi/tags/0.3.5/
 (Nov 22 2006, from branches/stable/0.3.x)
 
  * Fix XPath traversal in match templates. Previously, `div/p` would be treated 
