--- a/ChangeLog
+++ b/ChangeLog
@@ -1,29 +1,3 @@
-Version 0.5
-http://svn.edgewall.org/repos/genshi/tags/0.5.0/
-(?, from branches/stable/0.5.x)
-
- * Added #include directive for text templates (ticket #115).
- * Added new markup transformation filter contributed by Alec Thomas. This
-   provides gorgeous jQuery-inspired stream transformation capabilities based
-   on XPath expressions.
- * When using HTML or XHTML serialization, the `xml:lang` attribute is
-   automatically translated to the `lang` attribute which HTML user agents
-   understand.
- * Added support for the XPath 2 `matches()` function in XPath expressions,
-   which allow matching against regular expressions.
- * Support for Python code blocks in templates can now be disabled
-   (ticket #123).
- * Includes are now processed when the template is parsed if possible, but
-   only if the template loader is not set to do automatic reloading. Included
-   templates are basically inlined into the including template, which can
-   speed up rendering of that template a bit.
- * Added new syntax for text templates, which is more powerful and flexible
-   with respect to white-space and line breaks. The old syntax is still
-   available and the default for now, but in a future release the new syntax
-   will become the default, and some time affter that the old syntax will be
-   removed.
-
-
 Version 0.4.4
 http://svn.edgewall.org/repos/genshi/tags/0.4.4/
 (Aug 14, 2007, from branches/stable/0.4.x)
@@ -43,7 +17,7 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.4/
 
 Version 0.4.3
 http://svn.edgewall.org/repos/genshi/tags/0.4.3/
-(Jul 17 2007, from branches/stable/0.4.x)
+(?, from branches/stable/0.4.x)
 
  * The I18n filter no longer extracts or translates literal strings in
    attribute values that also contain expressions.
@@ -65,7 +39,7 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.3/
 
 Version 0.4.2
 http://svn.edgewall.org/repos/genshi/tags/0.4.2/
-(Jun 20 2007, from branches/stable/0.4.x)
+(Jun 20, from branches/stable/0.4.x)
 
  * The `doctype` parameter of the markup serializers now also accepts the "name"
    of the doctype as string, in addition to the `(name, pubid, sysid)` tuple.
