--- a/0.5.x/ChangeLog
+++ b/0.5.x/ChangeLog
@@ -1,3 +1,12 @@
+Version 0.5.1
+http://svn.edgewall.org/repos/genshi/tags/0.5.1/
+(???, from branches/stable/0.5.x)
+
+ * Fix problem with nested match templates not being applied when buffering
+   on the outer `py:match` is disabled. Thanks to Erik Bray for reporting the
+   problem and providing a test case!
+
+
 Version 0.5
 http://svn.edgewall.org/repos/genshi/tags/0.5.0/
 (Jun 9 2008, from branches/stable/0.5.x)
