--- a/0.5.x/ChangeLog
+++ b/0.5.x/ChangeLog
@@ -12,6 +12,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.2/
  * Import statements inside function definitions in template code blocks no 
    longer result in an UndefinedError when the imported name is accessed 
    (ticket #276).
+ * Fixed handling of relative URLs with fragment identifiers containing colons
+   in the `HTMLSanitizer` (ticket #274).
 
 
 Version 0.5.1
