advanced-i18n branch: Synced with trunk@1065.

--- a/advanced-i18n/ChangeLog
+++ b/advanced-i18n/ChangeLog
@@ -3,6 +3,16 @@ http://svn.edgewall.org/repos/genshi/tags/0.6.0/
 (???, from branches/stable/0.6.x)
 
  * Support for Python 2.3 has been dropped.
+ * Rewrite of the XPath evaluation engine for better performance and improved
+   correctness. This is the result of integrating work done by Marcin Kurczych
+   during GSoC 2008.
+ * Updated the Python AST processing for template code evaluation to use the
+   `_ast` module instead of the deprecated `compiler` package, including an
+   adapter layer for Python 2.4, and some workarounds to enable compatibility
+   with Google App Engine. This, too, is the result of integrating work done
+   by  Marcin Kurczych during GSoC 2008.
+ * Added caching in the serialization stage for improved performance.
+ * Various improvements to the HTML sanitization filter.
 
 
 Version 0.5.2
@@ -19,6 +29,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.2/
  * Import statements inside function definitions in template code blocks no 
    longer result in an UndefinedError when the imported name is accessed 
    (ticket #276).
+ * Fixed handling of relative URLs with fragment identifiers containing colons
+   in the `HTMLSanitizer` (ticket #274).
+ * Added an option to the `HTMLFiller` to also populate password fields.
 
 
 Version 0.5.1
