--- a/0.7.x/ChangeLog
+++ b/0.7.x/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.7.1
+http://svn.edgewall.org/repos/genshi/tags/0.7.1/
+(???, from branches/stable/0.7.x)
+
+ * ???
+
+
 Version 0.7
 http://svn.edgewall.org/repos/genshi/tags/0.7.0/
 (Dec 30 2012, from branches/stable/0.7.x)
