Put back [egg_info], bump version number and add new section to ChangeLog.

--- a/0.6.x/ChangeLog
+++ b/0.6.x/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.6.2
+http://svn.edgewall.org/repos/genshi/tags/0.6.2/
+(???, from branches/stable/0.6.x)
+
+ * ???
+
+
 Version 0.6.1
 http://svn.edgewall.org/repos/genshi/tags/0.6.1/
 (Dec 30 2012, from branches/stable/0.6.x)
